# HCR2018

./: .gitignore  .gitmodules  README.md
Autocad/: base.dxf  door.dxf  leg.dxf  wall.dxf
Nav2d/: Readme.md
ROS/: .gitignore  HOW TO CREATE CUSTOM MSG FOR PUBLISHER.md  README.md
ROS/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ROS/catkin_ws/devel/lib/pkgconfig/: tutorial_pub_sub.pc
ROS/catkin_ws/devel/lib/tutorial_pub_sub/: hello  tutorial_pub  tutorial_pub_sub
ROS/catkin_ws/src/joyControl/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/joyControl/launch/: joyControl.launch
ROS/catkin_ws/src/joyControl/src/: joyControl.cpp
ROS/kinect_nav-master/: mark3.py
ROS/main/: frames.gv  setupRobot.bash
ROS/main/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ROS/main/devel/include/amcl/: AMCLConfig.h
ROS/main/devel/include/base_local_planner/: Position2DInt.h
ROS/main/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
ROS/main/devel/include/custom_msgs/: robotInfo.h
ROS/main/devel/include/dwa_local_planner/: DWAPlannerConfig.h
ROS/main/devel/include/global_planner/: GlobalPlannerConfig.h
ROS/main/devel/include/socket_msg/: socketMsg.h
ROS/main/devel/lib/amcl/: amcl
ROS/main/devel/lib/base_local_planner/: point_grid
ROS/main/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
ROS/main/devel/lib/fake_localization/: fake_localization
ROS/main/devel/lib/global_planner/: planner
ROS/main/devel/lib/map_server/: map_saver  map_server  rtest
ROS/main/devel/lib/move_base/: move_base
ROS/main/devel/lib/navfn/: navfn_node
ROS/main/devel/lib/p3at_teleop_master/: teleop_p3at
ROS/main/devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  custom_msgs.pc  dwa_local_planner.pc  facial_recognition.pc  fake_localization.pc  global_planner.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  p3at_teleop_master.pc  robot_server_interface.pc  rotate_recovery.pc  simple_navigation_goals.pc  socket_msg.pc  socket_webserver.pc  voxel_grid.pc
ROS/main/devel/lib/robot_server_interface/: publishMsgFromRobot
ROS/main/devel/lib/simple_navigation_goals/: subscriber
ROS/main/src/: README.md
ROS/main/src/amcl/examples/: amcl.launch  amcl_diff.launch  amcl_omni.launch
ROS/main/src/cloud_control/: CMakeLists.txt  package.xml
ROS/main/src/cloud_control/launch/: control.launch
ROS/main/src/cloud_control/src/: control.cpp
ROS/main/src/custom_msgs/: package.xml
ROS/main/src/custom_msgs/msg/: robotInfo.msg
ROS/main/src/facial_recognition/: CMakeLists.txt
ROS/main/src/facial_recognition/launch/: kinect.launch
ROS/main/src/facial_recognition/src/: kinect_face_detect.py
ROS/main/src/map_server/assets/: mymap.yaml  mymap2.yaml
ROS/main/src/map_server/launch/: map_server.launch
ROS/main/src/move_base/launch/: move_base.launch
ROS/main/src/nav2d/kinect_nav-master/: functions.py  history.txt  mark2.py
ROS/main/src/nav2d/obstacle_avoidance/: CMakeLists.txt  package.xml
ROS/main/src/nav2d/obstacle_avoidance/src/: sonar_node.cpp
ROS/main/src/nav2d/opencv_tutorial/: CMakeLists.txt  package.xml
ROS/main/src/odometry_source/: CMakeLists.txt  package.xml
ROS/main/src/odometry_source/src/: odometry.cpp
ROS/main/src/p2os_launch/launch/: global_costmap_params.yaml  local_costmap_params.yaml  navigation-pioneer-3at.launch
ROS/main/src/p3at_teleop_master/: CMakeLists.txt
ROS/main/src/p3at_teleop_master/launch/: p3at_teleop.launch
ROS/main/src/py_socket/: CMakeLists.txt  package.xml
ROS/main/src/py_socket/src/: py_client.py
ROS/main/src/robot_server_interface/: CMakeLists.txt  package.xml
ROS/main/src/robot_server_interface/src/: publishMsgFromRobot.cpp
ROS/main/src/rplidar_ros/: README.md
ROS/main/src/rplidar_ros/launch/: rplidar.launch
ROS/main/src/silver_retriever_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  package.xml
ROS/main/src/simple_navigation_goals/: CMakeLists.txt  package.xml
ROS/main/src/socket_msg/: CMakeLists.txt  package.xml
ROS/main/src/socket_webserver/: CMakeLists.txt  package.xml
ROS/motorControl/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ROS/motorControl/src/custom_msgs/: CMakeLists.txt
ROS/motorControl/src/facial_recognition/: CMakeLists.txt  package.xml
ROS/motorControl/src/opencv-test/: package.xml
ROS/motorControl/src/p3at_teleop_master/: package.xml
ROS/motorControl/src/robot_server_interface/: CMakeLists.txt  package.xml
ROS/motorControl/src/shared_files/: robotInfo.h
ROS/motorControl/src/simple_navigation_goals/: CMakeLists.txt
ROS/motorControl/src/socket_webserver/: CMakeLists.txt  package.xml
ROS/obstacle_avoidance/: CMakeLists.txt  rosPioneer1.py
ROS/obstacle_avoidance/launch/: obstacle_avoidance.launch  tutorial_pub_sub.launch
ROS/obstacle_avoidance/src/: Untitled Document  sonar_node.cpp  subscribe_node.cpp
ROS/opencv_test/: CMakeLists.txt  package.xml
ROS/opencv_test/scripts/: kinect_face_detect.py
ROS/opencv_test/src/: internal_cam_test.cpp  internal_cam_test_7trackers.cpp  internal_cam_test_HOG.cpp  internal_cam_test_haarcascade.cpp  kinect_cam_test.cpp
arduino/: arduino_motor.ino
client/: README.md  app.js  package-lock.json  package.json  webpack.config.js
client/src/app/: index.tsx
client/src/app/actions/: hello.ts  index.ts  user.ts
client/src/app/components/: index.ts
client/src/app/middleware/: logger.ts
client/src/app/reducers/: hello.ts  index.ts  state.ts
client/src/app/store/: index.ts
client/src/assets/: index.html
mock_ROS/: README.md  box.py  face_detect.py  mock_rasp.py  py_client_mock.py
motor_datasheet/: datasheet
raspberry_client/: README.md  box.py  client_loop.py  remote_client.py
server/: README.md  app.js  package-lock.json  package.json
server/controllers/: user.ctrl.js
server/models/: User.js
server/routes/: index.js  user.js
server/sockets/: index.js
(+140 files in other folders)
